# snake-rl

./: main.py  notes.txt  pyproject.toml
model/: checkpoint.pth
scripts/: check_torch_device.py
src/: __init__.py  agent.py  controllers.py  game.py  main.py  model.py  replay.py
