[project]
name = "snake-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

