[project]
name = "snake-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
